# surd-rs

./: .gitignore  Cargo.toml  README.md
src/: _dev_utils.rs  error.rs  infotheory.rs  lib.rs  numpy.rs
