[package]
name = "surd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
ndarray-slice = "0.4.0"
ndarray-stats = "0.6.0"
num-traits = "0.2.19"
ndarray-rand = "0.15.0"
rand_isaac = "0.3.0"

[dev-dependencies]
anyhow = "1.0.93"
approx = "0.5.1"
assert_approx_eq = "1.1.0"
